# SyspatWEB

./: .gitignore  SysWebPat.code-workspace
backend/: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
backend/api/: index.py
backend/app/api/: __init__.py
backend/app/api/routes/: auth.py  products.py  reports.py  suppliers.py  support.py  users.py
backend/app/core/: cache.py  config.py  database.py  security.py
backend/app/schemas/: auth.py  products.py  reports.py  suppliers.py  support.py  users.py
backend/app/services/: auth_service.py  products_service.py  reports_service.py  suppliers_service.py  support_service.py  users_service.py
backend/migrations/: 001_create_tables.sql  run_migration.py
frontend/: package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: ClientLayout.tsx  globals.css  layout.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/(app)/dashboard/: page.tsx
frontend/src/app/(app)/patrimonio/: page.tsx
frontend/src/app/change-password/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/modules/: page.tsx
frontend/src/components/: AuthProvider.tsx  Button.tsx  Input.tsx  LoadingScreen.tsx  Modal.tsx  Pagination.tsx  Sidebar.tsx  Toast.tsx
frontend/src/config/: constants.ts
frontend/src/services/: api.ts  authService.ts  productsService.ts  reportsService.ts  suppliersService.ts  supportService.ts  usersService.ts
frontend/src/store/: authStore.ts
frontend/src/types/: auth.ts  index.ts  product.ts  reports.ts  supplier.ts  support.ts
(+8 files in other folders)
